Fix spelling and coeffecients

--- a/phys234/phys234.tex
+++ b/phys234/phys234.tex
@@ -452,7 +452,7 @@
          \[ \braket{-}{-} = 1 \ \ \ \ \ \ \ \ \braket{-}{+} = 0 \]
 
          Completeness ensures that $\ket{+}, \ket{-}$ can be used as a basis to express any general Quantum Mechanical state as a linear combination of them
-         \[ \mbox{General State Vector \ \ \ } \ket{\Psi} = a\ket{+} + \ket{-} \mbox{ \ \ \ \ \ with $a, b$ complex scalars}  \]
+         \[ \mbox{General State Vector \ \ \ } \ket{\Psi} = a\ket{+} + b\ket{-} \mbox{ \ \ \ \ \ with $a, b$ complex scalars}  \]
          The coefficients are inner products, for example consider multiplying on the left by $\ket{+}$,
          \begin{align*}
            \braket{+}{\Psi} & = \braket{+}{\left( a\ket{+}+b\ket{-} \right)} \\
@@ -478,7 +478,7 @@
           In Quantum Mechanics we require that all kets (vectors) are normalized.
 
           \begin{exmp}
-            Given a general quantum state vector expressed as a linear combination of th ebasis kets for the 2D Hilbert Space associated with the $S_z$ observable:
+            Given a general quantum state vector expressed as a linear combination of the basis kets for the 2D Hilbert Space associated with the $S_z$ observable:
             \[ \ket{\Psi} = a \ket{+} + b\ket{-} \]
             Derive an expression for the coefficients, $a$ and $b$, which when satisfied ensure that $\ket{\Psi}$ is normalized.
           \end{exmp}
