--- a/notes.sty
+++ b/notes.sty
@@ -116,6 +116,15 @@ Last Revision: \today
 \newcommand{\ka}{\left| \alpha \rangle \right.}
 \newcommand{\kb}{\left| \beta \rangle \right.}
 \newcommand{\kg}{\left| \gamma \rangle \right.}
+\newcommand{\kpsi}{\ket{\Psi}}
+\newcommand{\bp}{\bra{+}}
+\newcommand{\bm}{\bra{-}}
+\newcommand{\kp}{\ket{+}}
+\newcommand{\km}{\ket{-}}
+\newcommand{\kplx}{\ket{+}_x}
+\newcommand{\kmix}{\ket{-}_x}
+\newcommand{\kply}{\ket{+}_y}
+\newcommand{\kmiy}{\ket{-}_y}
 \newcommand{\mtx}[1]{\left(\begin{matrix}#1\end{matrix}\right)}
 \newcommand{\ebasis}{\ket{e_1}, \ket{e_2}, \ldots, \ket{e_n}}
 \newcommand{\angstrom}{\mbox{\normalfont\AA}}
