Corrected a small error with your exponents

--- a/phys234/phys234.tex
+++ b/phys234/phys234.tex
@@ -934,7 +934,7 @@
           pr(+_x) & = \left| \braket{\Psi}{+_x} \right|^2 \\
                   & = \left| \left( a \bra{+_z}+be^{-i\theta}\bra{-_z} \right) \left( \f{\ket{+_z} + \ket{-_z}}{\sqrt{2}} \right) \right|^2 \\
                   & = \f{1}{2} \left| a + be^{-i\theta} \right|^2 \\
-                  & = \f{1}{2} \left( a^2 + b^2 + ab \left( e^{-i\theta + e^{i\theta}} \right) \right) \\
+                  & = \f{1}{2} \left( a^2 + b^2 + ab \left( e^{-i\theta} + e^{i\theta} \right) \right) \\
           pr(+_x) & = \f{1}{2} (1 + 2ab\cos\theta)
         \end{align*}
 
